--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Learning TypeScript</title>
 </head>
 <body>
-    <script src="types/Enums.js"></script>
+    <script src="functions/args-defect.js"></script>
 </body>
 </html>
